<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tutorial_title_3"
        android:id="@+id/tutorial_3_title"
        android:textSize="@dimen/abc_text_size_display_1_material" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tutorial_description_text_3_1"
        android:id="@+id/tutorial_text_3_1"
        android:textSize="@dimen/abc_text_size_large_material"
        android:paddingTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tutorial_description_text_3_2"
        android:id="@+id/tutorial_text_3_2"
        android:paddingTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tutorial_description_text_3_3"
        android:id="@+id/tutorial_3_text_3"
        android:paddingTop="35dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal|bottom">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Prev Page"
            android:id="@+id/tutorial_3_prev_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Main Menu"
            android:id="@+id/tutorial_3_menu_button" />
    </LinearLayout>
</LinearLayout>