<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tutorial_title_2"
        android:id="@+id/tutorial_2_title"
        android:textSize="@dimen/abc_text_size_display_1_material" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tutorial_description_text_2_1"
        android:id="@+id/tutorial_2_description_1"
        android:paddingTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tutorial_description_text_2_2"
        android:id="@+id/tutorial_2_hint_1"
        android:paddingTop="10dp"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tutorial_hint_text_2_1"
        android:id="@+id/tutorial_2_hint_2"
        android:textStyle="italic"
        android:paddingBottom="10dp"
        android:paddingTop="5dp" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:layout_gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Off"
            android:id="@+id/tutorial_2_button11"
            android:background="@drawable/board_button_styles_rounded_green" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Off"
            android:id="@+id/tutorial_2_button12"
            android:background="@drawable/board_button_styles_rounded_green" />
         <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Off"
            android:id="@+id/tutorial_2_button21"
            android:background="@drawable/board_button_styles_rounded_green" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Off"
            android:id="@+id/tutorial_2_button22"
            android:background="@drawable/board_button_styles_rounded_green" />

    </GridLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal|bottom">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Prev Page"
            android:id="@+id/tutorial_2_prev_page" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Next Page"
            android:id="@+id/tutorial_2_next_page" />
    </LinearLayout>
</LinearLayout>